--- a/404.md
+++ b/404.md
@@ -370,9 +370,15 @@ main > div:last-child span:last-child {
     <div id="linkbox">
       <span>sorry&nbsp;about&nbsp;that!</span>
       <span>
+        {% if site.url == "https://arlenross.github.io" %}
+        <a href="/api-doc-20-dev/">
+          <b>return&nbsp;home?</b>
+        </a>
+        {% else %}
         <a href="/">
           <b>return&nbsp;home?</b>
         </a>
+        {% endif %}
       </span>
     </div>
   </div>
